--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,14 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+#vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
-spring.jpa.defer-datasource-initialization = true
-spring.sql.init.mode = always
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application,com.github.appreciated.apexcharts,com.storedobject
+spring.jpa.defer-datasource-initialization=false
+#spring.sql.init.mode = update
+spring.datasource.url=jdbc:h2:file:/db/dbfile
+spring.datasource.username=data
+spring.datasource.password=pas
+#spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
