--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.mustache.check-template-location = false
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application,com.github.appreciated.apexcharts,com.storedobject
 spring.jpa.defer-datasource-initialization=false
-#spring.sql.init.mode = update
-spring.datasource.url=jdbc:h2:file:/db/dbfile
+spring.sql.init.mode =always
+spring.datasource.url=jdbc:h2:file:./db/dbfile
 spring.datasource.username=data
 spring.datasource.password=pas
 #spring.jpa.show-sql=true
